# easy-dwpose-fork

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/: easy_dwpose
tests/: test_dwpose_class.py
