[project]
name = "easy-dwpose"
version = "1.0.3"
description = "A fork of easy_dwpose"
authors = []
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.2,<3",
    "opencv-python>=4.10.0.84,<5",
    "numpy>=1.26.4,<2",
    "omegaconf==2.3.0",
    "onnxruntime>=1.17,<2.0 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.17,<2.0 ; sys_platform == 'linux'",
    "loguru>=0.7.2,<0.8",
    "tqdm>=4.66.5,<5",
    "imageio>=2.9.0,<3",
    "huggingface_hub>=0.24.6,<0.25",
    "matplotlib>=3.9.2,<4",
]

[dependency-groups]
dev = ["pytest>=6.2.5,<7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test_dwpose_class.py"]
