[project]
name = "easy-dwpose"
version = "1.0.2.post3"
description = "A fork of easy_dwpose"
authors = []
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.2,<3",
    "opencv-contrib-python>=4.10.0.84,<5",  # use the superset of all opencv variants
    "numpy>=1.26,<3",
    "omegaconf==2.3.0",
    "onnxruntime>=1.19,<2.0 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.19,<2.0 ; sys_platform == 'linux'",  # cuda 12.x from 1.17, numpy 2 from 1.19, tested through 1.20
    "loguru>=0.7.2,<0.8",
    "tqdm>=4.66.5,<5",
    "imageio>=2.9.0,<3",
    "huggingface_hub>=0.24.6,<2",  # tested through 1.0.1
    "matplotlib>=3.9.2,<4",
]

[dependency-groups]
dev = ["pytest>=6.2,<9"]  # pytest tested through 8.4

[tool.uv]
# prevent duplicate (and conflicting) opencv, so use the most complete
# version: contrib (extra modules), non-headeless (has gui even if not used)
override-dependencies = [
  "opencv-python>=4.10.0.84 ; sys_platform == 'never'",
  "opencv-python-headless>=4.10.0.84 ; sys_platform == 'never'",
  "opencv-contrib-python-headless>=4.10.0.84 ; sys_platform == 'never'",
]

[build-system]
# Install with: `uv pip install -e .`
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# so we can use src as editable package
# with: uv pip install -e .
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*", "assets", "*.gif", "*.png"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test_dwpose_class.py"]

